add: check user id
